--- a/index.html
+++ b/index.html
@@ -2,308 +2,257 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Pumba (Iqbal Hossain) — Gaming × Creator × Business" />
   <title>Pumba — Gaming × Business</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ✅ Favicon -->
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
   <style>
-    :root{
-      --bg:#070808;
-      --panel:rgba(255,255,255,.05);
-      --panel2:rgba(255,255,255,.07);
-      --line:rgba(255,255,255,.10);
-      --text:rgba(255,255,255,.92);
-      --muted:rgba(255,255,255,.65);
-      --red:#d11a1a;
-      --shadow: 0 18px 60px rgba(0,0,0,0.60);
-      --radius:18px;
+    :root {
+      --bg-dark: #0b0b0b;
+      --panel: rgba(0,0,0,0.55);
+      --panel-soft: rgba(0,0,0,0.35);
+      --text-main: #f2f2f2;
+      --text-muted: #b5b5b5;
+      --accent-red: #b11212;
+      --line: rgba(255,255,255,0.08);
+      --radius: 18px;
     }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif}
-    a{color:inherit;text-decoration:none}
-    a:hover{opacity:.92}
 
-    .wrap{max-width:1100px;margin:0 auto;padding:22px}
+    * { box-sizing: border-box; }
 
-    /* ✅ Banner background (uses banner.png) */
-    .heroBg{
-      border-radius:24px;
-      border:1px solid var(--line);
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: Inter, system-ui, sans-serif;
+      color: var(--text-main);
       background:
-        linear-gradient(90deg, rgba(0,0,0,.75), rgba(0,0,0,.35)),
-        url("banner.png") center/cover no-repeat;
-      box-shadow: var(--shadow);
-      overflow:hidden;
-      position:relative;
+        linear-gradient(to bottom, rgba(0,0,0,.75), rgba(0,0,0,.9)),
+        url("banner.png") center top / cover no-repeat fixed;
     }
 
-    /* Top nav pill */
-    .top{
-      display:flex;align-items:center;justify-content:space-between;
-      padding:14px 18px;
-      border-bottom:1px solid rgba(255,255,255,.08);
-      background:rgba(0,0,0,.40);
+    a { color: inherit; text-decoration: none; }
+
+    .wrap {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 26px;
+    }
+
+    /* Top bar */
+    .top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 14px 22px;
+      background: rgba(0,0,0,.55);
+      border: 1px solid var(--line);
+      border-radius: 999px;
       backdrop-filter: blur(10px);
-    }
-    .brand{display:flex;align-items:center;gap:12px}
-    .brandLogo{
-      width:44px;height:44px;border-radius:999px;
-      background:rgba(0,0,0,.35);
-      border:1px solid rgba(255,255,255,.12);
-      overflow:hidden;
-      display:grid;place-items:center;
-    }
-    /* ✅ Small avatar in the top left */
-    .brandLogo img{width:100%;height:100%;object-fit:cover}
-
-    .brandText b{display:block;line-height:1.05}
-    .brandText span{color:var(--muted);font-size:.92rem}
-
-    nav{display:flex;gap:16px;flex-wrap:wrap}
-    nav a{color:var(--muted);font-weight:600;padding:8px 10px;border-radius:999px}
-    nav a:hover{color:var(--text);background:rgba(255,255,255,.05);border:1px solid rgba(255,255,255,.08)}
-
-    /* Hero content layout */
-    .hero{
-      padding:22px;
-      display:grid;
-      grid-template-columns: 1.25fr .85fr;
-      gap:18px;
-    }
-    .chips{display:flex;gap:10px;flex-wrap:wrap;margin:6px 0 10px}
-    .chip{
-      display:inline-flex;align-items:center;gap:8px;
-      padding:7px 12px;border-radius:999px;
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.35);
-      color:rgba(255,255,255,.85);
-      font-weight:600;font-size:.9rem;
+      margin-bottom: 26px;
     }
 
-    h1{
-      margin:8px 0 10px;
-      font-size: clamp(2.1rem, 5vw, 3.2rem);
-      line-height:1.05;
-      letter-spacing:-0.03em;
-    }
-    .accent{color:var(--red)}
-    .lead{margin:0;color:var(--muted);max-width:60ch}
-
-    .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:14px}
-    .btn{
-      display:inline-flex;align-items:center;gap:10px;
-      padding:10px 14px;border-radius:999px;
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.40);
-      font-weight:800;
-    }
-    .btn.primary{
-      border:none;background:var(--red);color:#0b0b0b;
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      font-weight: 700;
     }
 
-    /* Right card */
-    .sideCard{
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.45);
+    .brand img {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 1px solid var(--line);
+    }
+
+    nav a {
+      margin-left: 14px;
+      color: var(--text-muted);
+    }
+
+    nav a:hover { color: var(--text-main); }
+
+    /* Hero */
+    .hero {
+      display: grid;
+      grid-template-columns: 1.4fr 0.6fr;
+      gap: 24px;
+      background: var(--panel);
+      border: 1px solid var(--line);
       border-radius: var(--radius);
-      padding:14px;
-      box-shadow: 0 18px 50px rgba(0,0,0,.35);
+      padding: 34px;
+      backdrop-filter: blur(8px);
     }
-    .profileBox{
-      border:1px solid rgba(255,255,255,.10);
-      background:rgba(0,0,0,.35);
-      border-radius: 16px;
-      padding:14px;
-      display:flex;
-      gap:12px;
-      align-items:center;
-      margin-bottom:12px;
-    }
-    /* ✅ Main avatar on the right */
-    .avatar{
-      width:56px;height:56px;border-radius:14px;
-      overflow:hidden;
-      border:1px solid rgba(255,255,255,.12);
-      background:rgba(0,0,0,.35);
-      flex:0 0 auto;
-    }
-    .avatar img{width:100%;height:100%;object-fit:cover}
 
-    .profileBox b{display:block}
-    .profileBox small{color:var(--muted)}
-
-    .miniTitle{margin:0 0 6px;font-weight:900}
-    .miniText{margin:0 0 10px;color:var(--muted)}
-
-    .linkCard{
-      padding:12px;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,.10);
-      background:rgba(255,255,255,.04);
-      margin-bottom:10px;
+    h1 {
+      font-size: clamp(2.2rem, 5vw, 3.4rem);
+      line-height: 1.1;
+      margin: 0;
     }
-    .linkCard b{display:block;margin-bottom:4px}
-    .linkCard a{color:rgba(255,255,255,.9);text-decoration:underline;text-underline-offset:3px}
-    .linkCard .sub{color:var(--muted);font-size:.92rem}
+
+    h1 span {
+      color: var(--accent-red);
+    }
+
+    .tag {
+      display: inline-block;
+      padding: 6px 12px;
+      border-radius: 999px;
+      background: rgba(0,0,0,.45);
+      border: 1px solid var(--line);
+      margin-right: 8px;
+      font-size: 0.85rem;
+    }
+
+    .desc {
+      color: var(--text-muted);
+      max-width: 55ch;
+      margin: 14px 0;
+    }
+
+    .buttons {
+      display: flex;
+      gap: 12px;
+      margin-top: 18px;
+      flex-wrap: wrap;
+    }
+
+    .btn {
+      padding: 12px 18px;
+      border-radius: 999px;
+      border: 1px solid var(--line);
+      background: rgba(0,0,0,.45);
+      font-weight: 600;
+    }
+
+    .btn.primary {
+      background: var(--accent-red);
+      border: none;
+      color: #fff;
+    }
+
+    /* Side card */
+    .side {
+      background: var(--panel-soft);
+      border: 1px solid var(--line);
+      border-radius: var(--radius);
+      padding: 20px;
+    }
+
+    .side img {
+      width: 72px;
+      height: 72px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 1px solid var(--line);
+      margin-bottom: 10px;
+    }
+
+    .link {
+      padding: 12px;
+      border-radius: 12px;
+      border: 1px solid var(--line);
+      margin-top: 10px;
+      background: rgba(0,0,0,.4);
+      color: var(--text-muted);
+    }
+
+    .link:hover { color: var(--text-main); }
 
     /* Sections */
-    .section{
-      margin-top:18px;
-      border:1px solid rgba(255,255,255,.10);
-      background:rgba(255,255,255,.03);
+    .section {
+      margin-top: 24px;
+      padding: 26px;
+      background: var(--panel-soft);
+      border: 1px solid var(--line);
       border-radius: var(--radius);
-      padding:22px;
-    }
-    .sectionHead{
-      display:flex;justify-content:space-between;gap:14px;flex-wrap:wrap;align-items:baseline;
-      margin-bottom:10px;
-    }
-    .sectionHead h2{margin:0}
-    .hint{color:var(--muted)}
-
-    footer{
-      margin:18px 0 10px;
-      text-align:center;
-      color:var(--muted);
     }
 
-    @media(max-width:900px){
-      .hero{grid-template-columns: 1fr}
+    footer {
+      margin: 26px 0;
+      text-align: center;
+      color: var(--text-muted);
+      font-size: 0.9rem;
+    }
+
+    @media (max-width: 900px) {
+      .hero { grid-template-columns: 1fr; }
+      nav { display: none; }
     }
   </style>
 </head>
 
 <body>
   <div class="wrap">
+    <header class="top">
+      <div class="brand">
+        <img src="avatar.png" alt="Pumba avatar">
+        <div>Pumba / Iqbal Hossain</div>
+      </div>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#business">Business</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
 
-    <section class="heroBg" id="top">
-      <div class="top">
-        <div class="brand">
-          <div class="brandLogo">
-            <img src="avatar.png" alt="Pumba logo">
-          </div>
-          <div class="brandText">
-            <b>Pumba / Iqbal Hossain</b>
-            <span>Gaming × Creator × Business</span>
-          </div>
+    <section class="hero">
+      <div>
+        <span class="tag">Discord: pumba_008</span>
+        <span class="tag">Creator portfolio</span>
+        <span class="tag">Open to collabs</span>
+
+        <h1>Shadow. Steel.<br><span>Presence.</span><br>Gaming energy — business ready.</h1>
+
+        <p class="desc">
+          I’m Pumba (Iqbal Hossain). I create gaming edits and content and work with brands
+          on promos, content packages, and long-term collaborations.
+        </p>
+
+        <div class="buttons">
+          <a class="btn primary" href="https://youtube.com" target="_blank">YouTube</a>
+          <a class="btn" href="#business">Work with me</a>
+          <a class="btn" href="#contact">Contact</a>
         </div>
-
-        <nav>
-          <a href="#about">About</a>
-          <a href="#business">Business</a>
-          <a href="#social">Social</a>
-          <a href="#contact">Contact</a>
-        </nav>
       </div>
 
-      <div class="hero">
-        <div>
-          <div class="chips">
-            <span class="chip">Discord: pumba_008</span>
-            <span class="chip">Creator portfolio</span>
-            <span class="chip">Open to collabs</span>
-          </div>
+      <aside class="side">
+        <img src="avatar.png" alt="">
+        <strong>Pumba</strong>
+        <div style="color:var(--text-muted); font-size:.9rem;">Gaming × Creator × Business</div>
 
-          <h1>
-            Shadow. Steel.<br>
-            <span class="accent">Presence.</span><br>
-            Gaming energy —<br>
-            business ready.
-          </h1>
-
-          <p class="lead">
-            I’m <b>Pumba</b> (Iqbal Hossain) — I make gaming edits/content and I’m also open to professional collaborations.
-            If you want promos, content packages, or creator-style brand work, let’s talk.
-          </p>
-
-          <div class="actions">
-            <a class="btn primary" href="https://youtube.com/@editsenpaisan?si=tJX-Xf8U-zL_AoFx" target="_blank" rel="noopener noreferrer">▶ YouTube</a>
-            <a class="btn" href="#business">Work with me</a>
-            <a class="btn" href="#contact">Contact</a>
-          </div>
-        </div>
-
-        <aside class="sideCard">
-          <div class="profileBox">
-            <div class="avatar">
-              <img src="avatar.png" alt="Pumba avatar">
-            </div>
-            <div>
-              <b>Pumba</b>
-              <small>Gaming × Creator × Business</small>
-            </div>
-          </div>
-
-          <p class="miniTitle">Quick links</p>
-          <p class="miniText">Fast access to socials and music.</p>
-
-          <div class="linkCard">
-            <b>Spotify</b>
-            <div class="sub"><a href="https://open.spotify.com/user/31mmiudwvwcxrk666p6rb3grse3m?si=f79b29033cfc40ad" target="_blank" rel="noopener noreferrer">Open my profile →</a></div>
-          </div>
-
-          <div class="linkCard">
-            <b>Instagram</b>
-            <div class="sub"><a href="https://www.instagram.com/_iqbal_hossain__/" target="_blank" rel="noopener noreferrer">Visit →</a></div>
-          </div>
-
-          <div class="linkCard">
-            <b>Facebook</b>
-            <div class="sub"><a href="https://www.facebook.com/profile.php?id=100087091683993" target="_blank" rel="noopener noreferrer">Profile →</a></div>
-          </div>
-
-          <div class="linkCard">
-            <b>Discord</b>
-            <div class="sub">pumba_008</div>
-          </div>
-        </aside>
-      </div>
+        <div class="link">Spotify →</div>
+        <div class="link">Instagram →</div>
+        <div class="link">Facebook →</div>
+        <div class="link">Discord: pumba_008</div>
+      </aside>
     </section>
 
     <section class="section" id="about">
-      <div class="sectionHead">
-        <h2>About</h2>
-        <div class="hint">A clean intro</div>
-      </div>
-      <p style="margin:0;color:var(--muted);">
-        I’m Iqbal Hossain — online I go by <b>Pumba</b>. I create gaming-focused edits/content and I’m open to collaborations and business work.
+      <h2>About</h2>
+      <p class="desc">
+        Clean, dark, creator-focused presence inspired by discipline, atmosphere,
+        and sharp visuals.
       </p>
     </section>
 
     <section class="section" id="business">
-      <div class="sectionHead">
-        <h2>Business</h2>
-        <div class="hint">Work & services</div>
-      </div>
-      <p style="margin:0;color:var(--muted);">
-        Promos • Content packages • Brand collaborations • Long-term partnerships.
-      </p>
-    </section>
-
-    <section class="section" id="social">
-      <div class="sectionHead">
-        <h2>Social</h2>
-        <div class="hint">Find me online</div>
-      </div>
-      <p style="margin:0;color:var(--muted);">
-        YouTube, Instagram, Facebook, Spotify, and Discord: <b>pumba_008</b>.
+      <h2>Business</h2>
+      <p class="desc">
+        Promos • Content packages • Brand collaborations • Long-term partnerships
       </p>
     </section>
 
     <section class="section" id="contact">
-      <div class="sectionHead">
-        <h2>Contact</h2>
-        <div class="hint">Business inquiries</div>
-      </div>
-      <p style="margin:0;color:var(--muted);">
-        Email: <a href="mailto:whitemask10933@gmail.com" style="text-decoration:underline;text-underline-offset:3px;">whitemask10933@gmail.com</a>
+      <h2>Contact</h2>
+      <p class="desc">
+        Reach me via Discord or Instagram for collaborations.
       </p>
     </section>
 
@@ -317,3 +266,4 @@
   </script>
 </body>
 </html>
+
